# NetArena

./: .gitignore  .gitmodules  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
.github/workflows/: test-and-publish.yml
docs/: architecture.md  multi_agent.md
manifests/: purple-agent-component.json5
scripts/: submit_workflow.sh
src/: agent.py  agent_old.py  config.py  executor.py  llm.py  roles.py  server.py
tests/: test_pure_networkx_agent.py
